--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "deepagents>=0.0.4",
+    "dotenv>=0.9.9",
+    "langchain-openai>=0.3.31",
+    "langchain-tavily>=0.2.11",
+    "tavily-python>=0.7.11",
+]
